force-app/main/default/objects/Aqua_Inventory__c/Aqua_Inventory__c.object-meta.xml
<CustomObject>
    <label>Aqua Inventory</label>
    <nameField>
        <displayFormat>AINV-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aqua Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>