force-app/main/default/objects/Aqua_Inventory__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Aqua Inventory</relationshipLabel>
    <relationshipName>Aqua_Inventory_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>