force-app/main/default/objects/Aqua_Inventory__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shop</fullName>
                <default>true</default>
                <label>Shop</label>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>