force-app/main/default/objects/Aqua_Inventory__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <description>Where this inventory lives: Shop (warehouse), Van (in a tech vehicle), or On-Site (installed at a lot).</description>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shop</fullName>
                <default>true</default>
                <label>Shop</label>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>