force-app/main/default/objects/Aqua_Inventory__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Aqua Inventory (Van)</relationshipLabel>
    <relationshipName>Aqua_Inventory_Van</relationshipName>
    <type>Lookup</type>
</CustomField>